--- a/style.css
+++ b/style.css
@@ -184,16 +184,13 @@ body {
 }
 .review__profile-box {
   display: flex;
-  align-items: center;
+  margin-bottom: 23px;
 }
 .review__profile-img {
   width: 40px;
   height: 40px;
   margin-right: 23px;
   border-radius: 50%;
-}
-.review__name-box {
-  margin-bottom: 23px;
 }
 .review__name {
   font-weight: 700;
